# corpus-scrub

./: .gitignore  README.md  RESEARCH.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
src/corpus_scrub/: cli.py  models.py  readers.py  redact.py  report.py
src/corpus_scrub/detectors/: __init__.py  pii.py  secrets.py  universal.py
tests/: _gitleaks_parse.py  test_corpus_scrub.py  test_readers.py  test_readers_cli.py
tests/data/fixtures/: benign.jsonl  make_fixtures.py  multilingue_benign.jsonl  multilingue_seed.jsonl  pii_seed.jsonl  secrets_benign.jsonl  secrets_seed.jsonl  secrets_typed.jsonl
