[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus-scrub"
version = "0.1.0"
description = "Detect and redact PII + secrets in ML training corpora before training (local-first, AGPL-3.0)."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "Pedro Sordo Martínez", email = "amurlaniakea@gmail.com" }]
keywords = ["pii", "secrets", "ml", "training-data", "privacy", "gdpr", "sanitization"]
dependencies = [
    "presidio-analyzer==2.2.363",
    "presidio-anonymizer==2.2.363",
    "spacy==3.8.13",
]

[project.optional-dependencies]
testing = ["pytest>=8", "pytest-cov>=5", "jsonschema>=4"]
dev = ["ruff>=0.5"]
parquet = ["pyarrow>=15"]

[project.scripts]
corpus-scrub = "corpus_scrub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "slow: requires network / large model download (spaCy en_core_web_lg)",
]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]
